valhalla-graphtile/src/graph_tile/snapshots/valhalla_graphtile__graph_tile__tests__edge_info-2.snap
---
source: valhalla-graphtile/src/graph_tile/mod.rs
expression: first_edge_info.shape()
---
Ok(
    LineString(
        [
            Coord {
                x: 1.500854,
                y: 42.493887,
            },
            Coord {
                x: 1.500683,
                y: 42.493832,
            },
            Coord {
                x: 1.499611,
                y: 42.493021,
            },
            Coord {
                x: 1.499191,
                y: 42.49276,
            },
            Coord {
                x: 1.498014,
                y: 42.492160999999996,
            },
            Coord {
                x: 1.497094,
                y: 42.49161,
            },
            Coord {
                x: 1.496678,
                y: 42.491349,
            },
            Coord {
                x: 1.496569,
                y: 42.491274999999995,
            },
            Coord {
                x: 1.496448,
                y: 42.491155,
            },
            Coord {
                x: 1.4964169999999999,
                y: 42.491064,
            },
            Coord {
                x: 1.496392,
                y: 42.490972,
            },
            Coord {
                x: 1.496367,
                y: 42.490877,
            },
            Coord {
                x: 1.496348,
                y: 42.490671,
            },
            Coord {
                x: 1.4963359999999999,
                y: 42.490156999999996,
            },
            Coord {
                x: 1.496284,
                y: 42.489973,
            },
            Coord {
                x: 1.496159,
                y: 42.489788999999995,
            },
        ],
    ),
)
