valhalla-graphtile/src/graph_tile/snapshots/valhalla_graphtile__graph_tile__tests__edge_info-3.snap
---
source: valhalla-graphtile/src/graph_tile/mod.rs
expression: last_edge_info
---
EdgeInfo {
    inner: EdgeInfoInner {
        way_id: 247995246,
        first_inner_bitfield: FirstInnerBitfield {
            mean_elevation: 0,
            bike_network: 4,
            speed_limit: 60,
            extended_way_id: 0,
        },
        second_inner_bitfield: SecondInnerBitfield {
            name_count: 3,
            encoded_shape_size: 191,
            extended_way_id: 0,
            extended_way_id_size: 0,
            has_elevation: 0,
        },
    },
    name_info_list: [
        NameInfo {
            name_offset: 295,
            additional_fields: 0,
            is_route_num: 0,
            is_tagged: 0,
        },
        NameInfo {
            name_offset: 315,
            additional_fields: 0,
            is_route_num: 1,
            is_tagged: 0,
        },
        NameInfo {
            name_offset: 42,
            additional_fields: 0,
            is_route_num: 0,
            is_tagged: 1,
        },
    ],
    encoded_shape: b"\xca\xa2\xd3(\x8e\xc2\xba\x01d\x89\x01\x90\x01\xe7\x01\xb6\x01\xbd\x02\x94\x01\xe1\x01\xf2\x01\xd1\x01\x98\x02\xa7\x01\xba\x02s\xae\x02{\xbe\x01\xaf\x01\xac\x01\xf3\x01z\x91\x02>\xc3\x02 \xa1\x04 \xdf\x024\x9d\x02\xc4\x01\xf9\x04\x96\x01\xb9\x05V\xdd\x04T\x9b\x02\x88\x01\xf9\x01\xd2\x01\x87\x02\x80\x01\xcb\x01^\xbf\x01<\x8d\x02L\xa1\x02F\x8d\x01\x94\x01\x95\x01\xc6\x01\x87\x01\x98\x03\xd3\x01\xe0\x01\x8b\x01\xfc\x02\xa9\x02\x88\x01G\xa0\x01\x1d\xac\x05\x0c\xb6\x02\x11\xc8\x02K\xd8\x02{\xb4\x01m\x8c\x02\xab\x01\x84\x02\xb9\x01\xf4\x02\xd5\x02\xf0\x02\x83\x03\xaa\x01\xf3\x01\x92\x01\xa7\x02\xbc\x01\xef\x03\x90\x02\x87\x06\x9c\x01\x81\x03\xe0\x01\xd7\x03\xfa\x01\x91\x03\xec\x01\xed\x02\xaa\x01\xbf\x02",
    decoded_shape: OnceCell(
        <uninit>,
    ),
}
