valhalla-graphtile/src/graph_tile/snapshots/valhalla_graphtile__graph_tile__tests__edge_info.snap
---
source: valhalla-graphtile/src/graph_tile/mod.rs
expression: first_edge_info
---
EdgeInfo {
    inner: EdgeInfoInner {
        way_id: 0,
        first_inner_bitfield: FirstInnerBitfield {
            mean_elevation: 250,
            bike_network: 0,
            speed_limit: 60,
            extended_way_id: 0,
        },
        second_inner_bitfield: SecondInnerBitfield {
            name_count: 0,
            encoded_shape_size: 61,
            extended_way_id: 0,
            extended_way_id_size: 0,
            has_elevation: 0,
        },
    },
    name_info_list: [],
    encoded_shape: b"\xfe\x9e\xc3(\xec\x9a\xb7\x01m\xd5\x02\xd5\x0c\xdf\x10\x89\x04\xc7\x06\xad\t\xb1\x12\xcd\x08\xaf\x0e\x89\x04\xbf\x06\x93\x01\xd9\x01\xef\x01\xf1\x01\xb5\x01=\xb7\x011\xbd\x011\x9b\x03%\x83\x08\x17\xef\x02g\xef\x02\xf9\x01",
    decoded_shape: OnceCell(
        <uninit>,
    ),
}
