valhalla-graphtile/src/graph_tile/snapshots/valhalla_graphtile__graph_tile__tests__first_edge_info_names.snap
---
source: valhalla-graphtile/src/graph_tile/mod.rs
expression: first_edge_info.get_names()
---
[]
