valhalla-graphtile/src/graph_tile/snapshots/valhalla_graphtile__graph_tile__tests__other_edge_info_names.snap
---
source: valhalla-graphtile/src/graph_tile/mod.rs
expression: other_edge_info.get_names()
---
[
    "Port d'Envalira",
    "CG-2",
]
